v0.16: User login, signin and signout API and fixes
